# novel-ai

./: .gitignore  MANIFEST.in  MVP_TASKS.md  README.md  main.py  novel_cli_design_doc.md  pyproject.toml
docs/: architecture.md  configuration.md  contributing.md
novel_cli/: __init__.py  api_client.py  cli.py  config.py  context_loader.py  deepseek_client.py  errors.py  file_utils.py  output.py  project_detector.py  project_initializer.py  prompt_builder.py
novel_cli/templates/config/: config.yaml
novel_cli/templates/project/: AGENTS.md  novel.yaml
novel_cli/templates/project/docs/: characters.md  glossary.md  style.md  timeline.md  worldbuilding.md
novel_cli/templates/project/prompts/: continue.md  polish.md  rewrite.md  summarize.md
novel_cli/templates/project/summaries/: story-so-far.md
novel_cli/templates/prompts/: fill.md  polish.md  rewrite.md  summarize.md
tests/: conftest.py  test_api_client.py  test_cli.py  test_config.py  test_deepseek_client.py  test_file_utils.py  test_packaging_metadata.py  test_project_detector.py  test_prompt_builder.py
